--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/_components/front-page/Adtwo.tsx", "app/page.jsx", "app/product-details/[productId]/page.jsx", "app/api/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/_components/front-page/Adtwo.tsx", "app/page.tsx", "app/product-details/[productId]/page.jsx", "app/api/route.js", "app/_components/front-page/Adone.jsx", "app/_components/cart/cart.jsx"],
   "exclude": ["node_modules"]
 }
