--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
     "@preline/dropdown": "^2.5.0",
     "axios": "^1.7.8",
     "heroicons": "^2.2.0",
-    "next": "15.0.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
