--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "heroicons": "^2.2.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
