--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "noImplicitAny": false,
@@ -20,9 +24,27 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
-    }
+      "@/*": [
+        "./*"
+      ]
+    },
+    "strictNullChecks": true
   },
-  "include": ["next-env.d.js", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/_components/front-page/Adtwo.jsx", "app/page.tsx", "app/product-details/[productId]/page.jsx", "app/api/route.js", "app/_components/front-page/Adone.jsx", "app/_components/cart/cart.jsx", "app/product-details/[id]/page.jsx", "next.config.js"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.js",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/_components/front-page/Adtwo.jsx",
+    "app/page.tsx",
+    "app/product-details/[productId]/page.jsx",
+    "app/api/route.js",
+    "app/_components/front-page/Adone.jsx",
+    "app/_components/cart/cart.jsx",
+    "app/product-details/[id]/page.jsx",
+    "next.config.js"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
