--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@heroicons/react": "^2.2.0",
     "@popperjs/core": "^2.11.8",
     "@preline/dropdown": "^2.5.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.8",
     "heroicons": "^2.2.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "redux": "^5.0.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
